[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winnf"
version = "1.0.0"
description = "WInnForum common data libraries"
readme = "src/README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "WInnForum Authors" },
]
dependencies = [
  "numpy>=1.26",
  "pykml>=0.2",
  "sciencebasepy>=2.0.5",
  "shapely>=1.7",
  "six>=1.16",
]

[project.optional-dependencies]
pop = [
  "GDAL>=3",
]
test = [
  "pygc>=2",
  "pytest>=8",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "pygc>=2",
  "pytest>=8",
  "setuptools>=77",
  "wheel>=0.45",
]

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["winnf*"]

[tool.uv]
package = true
